9.blog/1.pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghost
