9.blog/2.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:latest
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: ghost-content
              mountPath: /var/lib/ghost/content
            - name: config-volume
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
      volumes:
        - name: ghost-content
          persistentVolumeClaim:
            claimName: ghost-content-pvc
        - name: config-volume
          configMap:
            name: ghost-config
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
  namespace: ghost
spec:
  type: ClusterIP
  selector:
    app: ghost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368
